fixed trailer stretching out of the screen for phones

--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,7 @@ hr {
 
 .trailer {
     border: none;
+    max-width: 100%;
 }
 
 .server-title {
